@@ -40,6 +40,7 @@ Gianfranco Costamagna
 Hiram van Paassen
 Jan-Piet Mens
 Joan Zapata
+Joe McIlvain
 Karl Palsson
 Larry Lendo
 Martin Assarsson
